# sff

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: cli.rs  main.rs
testdata/: shopping.md  weather.txt
