[package]
name = "sff"
version = "0.2.0"
authors = ["Dominik Weckmüller"] # Replace with your actual name/handle if different
description = "SemanticFileFinder (sff): Fast semantic file finder using sentence embeddings. Searches .txt, .md, .mdx files."
readme = "README.md"
repository = "https://github.com/your_username/sff" # TODO: Update with your repository URL
license = "MIT OR Apache-2.0" # Choose a license
keywords = ["semantic-search", "cli", "embeddings", "nlp"]
categories = ["command-line-utilities", "text-processing"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sff"
path = "src/main.rs" # Assuming your main.rs is in src/

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
anyhow = "1.0.79"
comfy-table = "7.1.0"
indicatif = "0.17.7"
model2vec-rs = "0.1.1"
ndarray = "0.15.6"
percent-encoding = "2.3.1"
rayon = "1.8.1"
walkdir = "2.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.8"
glob = "0.3.3"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true      # Enable Link Time Optimization
codegen-units = 1 # Maximize size reduction optimizations
panic = "abort" # Reduce binary size by aborting on panic
